--- a/package.json
+++ b/package.json
@@ -7,21 +7,41 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "cypress:open": "NODE_NO_WARNINGS=1 cypress open",
+    "cypress:run": "cypress run",
+    "coverage": "yarn test -- --coverage --watchAll --collectCoverageFrom=src/**/*.{ts,tsx}"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@reduxjs/toolkit": "^2.4.0",
+    "@testing-library/react": "^16.0.1",
+    "framer-motion": "12.12.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.4.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@material-tailwind/react": "^2.1.10",
     "@types/react": "^19.1.2",
+    "@types/react-anchor-link-smooth-scroll": "^1.0.5",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.20",
+    "cypress": "^14.4.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "file-loader": "^6.2.0",
     "globals": "^16.0.0",
+    "postcss": "^8.4.49",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "tailwindcss": "4.1.7",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
