--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "livelens_frontend",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -15,6 +14,8 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.4.0",
+    "@tailwindcss/postcss": "^4.1.7",
+    "@tailwindcss/vite": "^4.1.7",
     "@testing-library/react": "^16.0.1",
     "framer-motion": "12.12.1",
     "react": "^19.1.0",
@@ -38,10 +39,10 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "file-loader": "^6.2.0",
     "globals": "^16.0.0",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.3",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "4.1.7",
+    "tailwindcss": "^4.1.7",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
