--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "livelens_frontend",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -18,6 +19,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "@testing-library/react": "^16.0.1",
     "framer-motion": "12.12.1",
+    "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^19.1.0",
@@ -32,7 +34,7 @@
     "@types/react-anchor-link-smooth-scroll": "^1.0.5",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
     "cypress": "^14.4.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
