--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@tailwindcss/postcss": "^4.1.7",
     "@tailwindcss/vite": "^4.1.7",
     "@testing-library/react": "^16.0.1",
+    "@types/d3": "^7.4.3",
+    "d3": "^7.9.0",
     "framer-motion": "12.12.1",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
