--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build:prod": "npm run build && npm run preview"
   },
   "dependencies": {
+    "@google-cloud/local-auth": "^3.0.1",
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.4.0",
     "@tailwindcss/postcss": "^4.1.7",
@@ -21,6 +22,7 @@
     "@types/d3": "^7.4.3",
     "d3": "^7.9.0",
     "framer-motion": "12.12.1",
+    "google-auth-library": "^9.15.1",
     "google-oauth-api": "^0.0.3",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
