--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@eslint/js": "^9.25.0",
     "@material-tailwind/react": "^2.1.10",
     "@types/crypto-js": "^4.2.2",
+    "@types/lodash": "^4.17.17",
     "@types/react": "^19.1.2",
     "@types/react-anchor-link-smooth-scroll": "^1.0.5",
     "@types/react-dom": "^19.1.2",
