--- a/package.json
+++ b/package.json
@@ -20,17 +20,21 @@
     "@testing-library/react": "^16.0.1",
     "@types/axios": "^0.14.4",
     "@types/d3": "^7.4.3",
+    "@types/moment": "^2.13.0",
+    "axios": "^1.10.0",
     "d3": "^7.9.0",
     "framer-motion": "12.12.1",
     "google-auth-library": "^9.15.1",
     "google-oauth-api": "^0.0.3",
     "lucide-react": "^0.511.0",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^19.1.0",
     "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "recharts": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
